--- a/src/index.css
+++ b/src/index.css
@@ -16,16 +16,15 @@
   --oxford-blue: #101C42ff;
   --bondi-blue: #058FB2ff;
   --dark-orange-web: #FF8E27ff;
-  background-color: var(--alice-blue);
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: white;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--dark-orange-web) !important;
 }
 
 body {
@@ -34,7 +33,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: 
 }
 
 h1 {
