--- a/src/App.css
+++ b/src/App.css
@@ -5,49 +5,21 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  background-color: var(--alice-blue);
 }
 
 .navbar {
   margin: 0 auto;
   z-index: 10;
   border-width: 0.3rem;
-  box-shadow: 0 2px 4px 2px var(--dark-orange-web);
+  box-shadow: 0 2px 3px 2px #E9F3F9ff;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
