--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -16,6 +14,11 @@
   --oxford-blue: #101C42ff;
   --bondi-blue: #058FB2ff;
   --dark-orange-web: #FF8E27ff;
+  --paynes-gray: #525D79ff;
+  --blue-munsell: #56969Fff;
+  --berkeley-blue: #08335Dff;
+  --blue-green: #0199BAff;
+  --indigo-dye: #074970ff;
 }
 
 a {
