--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap');
+
 #navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    padding: 20px;
     width: 100%;
     margin: auto;
-    background-color: var(--bondi-blue);
-    box-shadow: 
+    background-color: var(--blue-green);
+    font-family: 'Caveat', cursive;
+}
+
+.logo{
+    width: "200px"
+
 }
