--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
 body{
   background-color: var(--alice-blue);
+  padding: 0;
+  margin: 0;
 }
 
 .navbar {
