--- a/src/styles/results.css
+++ b/src/styles/results.css
@@ -1,4 +1,5 @@
 .results {
     /* Override background styles for other pages */
-    background-image: none !important;
+    background-image: url('.././src/images/2913130.jpg');
+    background-position: center;
 }
