--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
   --berkeley-blue: #08335Dff;
   --blue-green: #0199BAff;
   --indigo-dye: #074970ff;
+  --caramel: #DD7F3Aff;
 }
 
 a {
@@ -33,11 +34,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
 
 button {
