--- a/src/styles/logo.css
+++ b/src/styles/logo.css
@@ -1,7 +1,8 @@
 .homepage {
-    background: url(.././smartphone-map.jpg);
+    background-image: url(../images/smartphone.png);
+    background-size: cover;
     min-height: 100vh;
-    margin-left: 100px;
+    max-width: 100%;
 }
 
 .animation {
