--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    min-width: 320px;
+    height: 100%;
 }
 
 button {
