fix results background

--- a/src/styles/results.css
+++ b/src/styles/results.css
@@ -1,6 +1,6 @@
 .results {
     /* Override background styles for other pages */
-    background-image: url('.././src/images/2913130.jpg');
+    background-image: url('../images/2913130.jpg');
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
