--- a/src/styles/results.css
+++ b/src/styles/results.css
@@ -1,11 +1,11 @@
 .results {
-    /* Override background styles for other pages */
-    background-image: url('../images/2913130.jpg');
+    background-image: url('../images/full-size-map-background.png');
     background-position: center;
-    background-size: cover;
+    background-size: 100% 100%;
     background-attachment: fixed;
-    min-height: 1000px;
+    min-height: 100vh;
     width: 100%;
+    overflow-y: scroll;
 }
 
 
